fix background stretch + async warnings

--- a/BigClubDebate.Web/wwwroot/css/site.css
+++ b/BigClubDebate.Web/wwwroot/css/site.css
@@ -105,12 +105,13 @@ ul li {
   z-index: -1;
 }
 body {
+    background-color: black;
     overflow-x: hidden;
     overflow-y: hidden;
     min-height: 100%;
-    background: radial-gradient(rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.99) 50%), url("../backgrounds/sheffwed_background.jpg") center 40px fixed;
-    background-size: contain;
     width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .moreInfoBar {
     text-align: center;
